--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Rock Paper Scissors</title>
+	<link rel="stylesheet" src="style.css">
 	<script type="text/javascript" src="rock-paper-scissors.js"></script>
 </head>
 
 <body>
-	<h1>
-		<script>
-			getComputerChoice();
-		</script>
-	</h1>
+	<div class="choiceBox">
+		<button onclick="singleRound('rock', getComputerChoice())">Rock</button>
+		<button>Paper</button>
+		<button>Scissors</button>
+	</div>
 </body>
 
 </html>
