updated index to show only a begin button // updated js to play a single round on "begin" button click and display win, lose, or tie. // added error handling on player prompt.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 
 <body>
 	<div class="choiceBox">
-		<button onclick="singleRound('rock', getComputerChoice())">Rock</button>
-		<button>Paper</button>
-		<button>Scissors</button>
-	</div>
+		<button onclick="singleRound(getPlayerChoice(), getComputerChoice())">Begin</button>
 </body>
 
 </html>
