added game() function and made the winner of the game best 3 out of 5 rounds.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div class="choiceBox">
-		<button onclick="singleRound(getPlayerChoice(), getComputerChoice())">Begin</button>
+		<button onclick="game()">Begin</button>
 </body>
 
 </html>
