added buttons for rock, paper, and scissor player selection instead of player typing in their choice.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Rock Paper Scissors</title>
 	<link rel="stylesheet" src="style.css">
-	<script type="text/javascript" src="rock-paper-scissors.js"></script>
+	<script type="text/javascript" src="rock-paper-scissors.js" defer></script>
 </head>
 
 <body>
-	<div class="choiceBox">
-		<button onclick="game()">Begin</button>
+		<button class="choiceBtn" value="rock">Rock</button>
+		<button class="choiceBtn" value="paper">Paper</button>
+		<button class="choiceBtn" value="scissors">Scissors</button>
 </body>
 
 </html>
