finished game mechanics and round-result tracking. Added basic styling, will come back later to make it look better.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Rock Paper Scissors</title>
-	<link rel="stylesheet" src="style.css">
+	<link rel="stylesheet" href="style.css">
 	<script type="text/javascript" src="rock-paper-scissors.js" defer></script>
 </head>
 
 <body>
+	<header>
+		<h1>Rock, Paper, Scissors!</h1>
+		<p>The classic! Rock, paper, scissors is considered the oldest hand game in the world, dating back to around 200 BC in the Chinese Han Dynasty!</p>
+    </header>
+	<p>To win this game, you must beat the computer best 3 out of 5. Good luck!</p>
+	<button id="startBtn">Begin!</button>
+	<div id="choiceBox" style="display:none">
 		<button class="choiceBtn" value="rock">Rock</button>
 		<button class="choiceBtn" value="paper">Paper</button>
 		<button class="choiceBtn" value="scissors">Scissors</button>
+	</div>
+	<footer>Kyle Schlue - 10/11/2022</footer>
 </body>
 
 </html>
